# csv-cruncher

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  corner.csv  diffcolumns.csv  emptylines.csv  malquoted.csv  sol049.csv  test.csv
src/: CMakeLists.txt  CsvParser.cpp  CsvParser.h  main.cpp
